# DGame.Framework

./: .clang-format  .clang-tidy  .cmake-format  .cmake-format.json  .cmake-format.yaml  .editorconfig  .gitignore  .prettierrc.json  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md
.github/workflows/: BuildPage.yml  CD.yml  CI.yml  FormatCheck.yml  PublishPage.yml
CMakeModules/: Dawn.cmake  Emscripten.cmake  SDL2.cmake
Examples/: CMakeLists.txt  Example.plist  HelloTriangle.cpp  Triangle.h
Header/: DGame.h
Header/DGame/: Audio.h  Backend.h  Context.h  ThreadPool.h  ThreadPoolCompat.h  ThreadPoolWOT.h  User.h
Source/: Audio.cpp  Renderer.h  Runtime.cpp  Scene.h  Shell.html  ThreadPool.cpp
Source/Backends/: Browser.cpp  Native.cpp  SDLRuntime.h  SDLWindow.cpp  SDLWindow.h  SDLWindowEvents.cpp
Source/Backends/SDL/: SDLRuntime.cpp  SDLRuntime.h  SDLWindow.cpp  SDLWindow.h  SDLWindow.mm  SDLWindowEvents.cpp
Source/CMakeModules/: Dawn.cmake  Emscripten.cmake  OpenAL.cmake  SDL2.cmake  Shaders.cmake  glm.cmake
Source/Shaders/: fragment.wgsl  triangle.frag  triangle.vert  vertex.wgsl
